Update 04_proves_i_depuracio.md